<resources>
    <string name="AJ">Card is not active</string>
    <string name="Check_Status">Check Status</string>
    <string name="Enter_Amount_between">Enter Amount between</string>
    <string name="Enter_End_Date">Enter End Date</string>
    <string name="Enter_Start_Date">Enter Start Date</string>
    <string name="FORGOT_PASSCODE_SCREEN_MESSAGE">Please keep your account number handy for resetting your passcode</string>
    <string name="FREEDOM_FROM_REGULAR_PAYMENT_WORRIES_WITH_OUR_AUTO_PAYMENT_MANDATE">FREEDOM FROM REGULAR PAYMENT WORRIES WITH OUR AUTO PAYMENT MANDATE</string>
    <string name="From">From :</string>
    <string name="Miscellaneous_App_Error">Sorry, your request could not be processed. Please try again.</string>
    <string name="No_Operator_found">No Operator found</string>
    <string name="Please_Add_Account_For_Referral">Please Add Account For Referral.</string>
    <string name="Please_select_Activated_account_VPA">Please select Activated account VPA!!</string>
    <string name="QR_Expire">QR code Expired Cannot Proceed with payment</string>
    <string name="QR_Image_saved_to">QR Image saved to</string>
    <string name="SP">Invalid/Incorrect ATM PIN</string>
    <string name="Share_Referral_Link">Share Referral Link</string>
    <string name="Success_i">Success!</string>
    <string name="res_0x7f120011_the_transaction_amount_has_to_be_exactly_the_same_as_the_mandate_amount_for_getting_processed">The Transaction amount has to be exactly the same as the mandate amount for getting processed.</string>
    <string name="Transactions_reversed">Transaction is Pending.If amount is deducted,it will be reversed to your account in a day.If not reversed ,you may contact your bank/raise a complaint</string>
    <string name="U76">UPI PIN Registration format not supported by the issuer bank</string>
    <string name="aadhar_already_exist">Aadhar contact already exists.</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ac_ifsc_acc">A/c + IFSC of the recipient</string>
    <string name="ac_number">A/C Number</string>
    <string name="accept">Accept</string>
    <string name="accept_alert_msg">Do you want to accept the mandate?</string>
    <string name="access_logs">Access Crash logs</string>
    <string name="account">Account</string>
    <string name="account_Remove_successfully">Account has been deleted successfully.</string>
    <string name="account_activated">Account has been added successfully</string>
    <string name="account_add">You do not have any bank account registered with BHIM Axis Pay UPI app. Please click on (+) to add an account.</string>
    <string name="account_add_home">You do not have any bank account registered with Axis Pay UPI app. Please add an account to proceed.</string>
    <string name="account_already_added">The account for the selected bank is already added on BHIM Axis Pay.</string>
    <string name="account_debit">Account debited but transaction confirmation not received by merchant</string>
    <string name="account_details">Account Details</string>
    <string name="account_did_not_match">Account number did not match</string>
    <string name="account_linked">UPI ID created &amp; Account is linked</string>
    <string name="account_no">Account No.</string>
    <string name="account_number">Account Number</string>
    <string name="account_number_cap">ACCOUNT NUMBER</string>
    <string name="account_type">Account Type</string>
    <string name="action_hide">HIDE</string>
    <string name="action_notifications">notifications</string>
    <string name="action_onboarding_step1">Step 1 | Verify Mobile Number</string>
    <string name="action_onboarding_step2">Step 2 | Set Security Lock Type | %s</string>
    <string name="action_onboarding_step3">Step 3 | Select Bank</string>
    <string name="action_onboarding_step4">Step 4 | Link Bank Account</string>
    <string name="action_onboarding_step4_1">Step 4 | Link Bank Accont | Set UPI ID</string>
    <string name="action_show">SHOW</string>
    <string name="active">Active</string>
    <string name="active_mandate_list">Active Mandate List</string>
    <string name="add_aadhar_contact">Add Aadhar Contact</string>
    <string name="add_account">Add Account</string>
    <string name="add_account_action">Post_login_axis_pay_add_account</string>
    <string name="add_account_pay">Add an Account to Pay</string>
    <string name="add_account_scan">Add an Account to Scan and Pay</string>
    <string name="add_account_set_your_UPI_id_refferal_code">Add account &amp; set your UPI ID \n \t to get your referral code</string>
    <string name="add_beneficiary">Add Beneficiary</string>
    <string name="add_contact">Add Contact</string>
    <string name="add_ifsc_contact">Add IFSC Contact</string>
    <string name="add_ping_pay_connections">Add to PingPay connections</string>
    <string name="add_remark">Remarks (Optional)</string>
    <string name="add_screenshots">Add Screenshots</string>
    <string name="add_tocontact">Add to Axis Pay Contact</string>
    <string name="add_upi_id_contact">Add UPI ID Contact</string>
    <string name="agree_tnc">Please agree to the terms and conditions</string>
    <string name="alert">Alert</string>
    <string name="alert_note_first">• Enter UPI PIN only on UPI PIN page.</string>
    <string name="alert_note_fourth">• Don’t share OTP with anyone.</string>
    <string name="alert_note_second">• Only sending money requires UPI PIN.</string>
    <string name="alert_note_third">• Avoid sharing financial information on social media. Contact the service provider through correct channels.</string>
    <string name="alert_note_title">Important Points to Note</string>
    <string name="all">All</string>
    <string name="all_contacts">All Contacts</string>
    <string name="all_transactions">All Transactions</string>
    <string name="alphanumeric_entries">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-._@</string>
    <string name="alphanumeric_entries_remarks">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-. @</string>
    <string name="alphanumeric_numbs">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="amount">Amount</string>
    <string name="amount_hint">10,000</string>
    <string name="amount_max_validation_warning">Maximum amount limit is Rs.1,00,000.</string>
    <string name="amount_of">Amount of</string>
    <string name="amount_received_expired">Request received of %1$s has expired</string>
    <string name="amount_received_failed">Request received of %1$s has failed. Sent by</string>
    <string name="amount_string_blocked_request">You have blocked the request of %1$s</string>
    <string name="amount_string_blocked_request_of">You have blocked the request of %1$s</string>
    <string name="amount_string_declined_request">You have declined the request of %1$s</string>
    <string name="amount_string_declined_request_of">You have declined the request of %1$s</string>
    <string name="amount_string_expired">Your transaction of %1$s is expired</string>
    <string name="amount_string_failed">Your transaction of %1$s has failed</string>
    <string name="amount_string_failed_txn">Transaction of %1$s has failed</string>
    <string name="amount_string_hasbeen_blocked_by">Your request of %1$s has been blocked by</string>
    <string name="amount_string_hasbeen_declined_by">Your request of %1$s has been blocked by</string>
    <string name="amount_string_pending">Your transaction of %1$s is pending</string>
    <string name="amount_string_pending_request_from">You have a pending request of %1$s from</string>
    <string name="amount_string_pending_with">Your transaction of %1$s is pending with</string>
    <string name="amount_string_request_has_been_blocked_by">Your request of %1$s has been blocked by</string>
    <string name="amount_string_request_has_been_declined_by">Your request of %1$s has been declined by</string>
    <string name="amount_string_request_has_expired">Your request of %1$s has expired</string>
    <string name="app_id">App Id</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="browse_plan">Browse all Plans</string>
    <string name="change_small">Change</string>
    <string name="curent_operator">Current Operator</string>
    <string name="dth_number">Subscriber ID</string>
    <string name="enter_new_passcode">Enter New 6 Digit Passcode</string>
    <string name="enter_old_passcode">Enter Old 6 Digit Passcode</string>
    <string name="enter_upi_id">Enter UPI ID</string>
    <string name="mobile_recharge">Recent</string>
    <string name="next">Next</string>
    <string name="no">No</string>
    <string name="no_existing_upi_contacts">No existing contacts. Please enter UPI ID to \n send money.</string>
    <string name="no_transaction_found">No Transaction Found</string>
    <string name="passcode_doesnt_match">Passcode does not match</string>
    <string name="pay">Pay</string>
    <string name="pay_request">Pay Request</string>
    <string name="payee_name">Payee Name</string>
    <string name="proceed">Proceed</string>
    <string name="proceed_to_recharge">Proceed to Recharge</string>
    <string name="promo_code">Promo Code</string>
    <string name="re_enter_passcode">Confirm New 6 Digit Passcode</string>
    <string name="remember_this">Remember This</string>
    <string name="security_option1">Use Screen Lock</string>
    <string name="security_option2">Use 6 Digit Passcode</string>
    <string name="secutiry_option1_desc">Use Pattern, PIN, Password or Fingerprint set in your phone settings to login.</string>
    <string name="secutiry_option2_desc">Set 6 digit passcode to login.</string>
    <string name="secutiry_title">Select security lock type for Axis Pay</string>
    <string name="set_passcode">Set New Passcode</string>
    <string name="transaction_remarks">Transaction Remarks</string>
    <string name="transcaction_reference">Transaction Ref #</string>
    <string name="upi_id_contacts">UPI ID Contacts</string>
    <string name="verify">Verify</string>
</resources>