<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <FrameLayout android:id="@+id/fragment_connection" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <RelativeLayout android:id="@+id/layout_indicator" android:visibility="gone" android:layout_width="match_parent" android:layout_height="0x7f070267">
            <com.upi.axispay.custom.CustomViewPager android:id="@+id/pager" android:background="@color/home_background" android:layout_width="match_parent" android:layout_height="0x7f070267" app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
            <com.viewpagerindicator.CirclePageIndicator android:id="@+id/dots" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" app:centered="true" app:fillColor="@color/white" app:pageColor="@color/grey" app:radius="3dp" app:snap="false"/>
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:id="@+id/recharge_input" android:background="@drawable/rounded_white_background" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="0x7f070228" android:layout_marginTop="0x7f0700f5" android:layout_marginRight="0x7f070228" android:layout_marginBottom="0x7f070228" android:layout_below="@+id/fragment_connection" android:translationZ="18dp">
            <com.upi.axispay.custom.FloatingInputLayout android:id="@+id/dth_num_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="0x7f070228" android:layout_marginTop="0x7f070228" android:layout_marginRight="0x7f070228" android:layout_marginBottom="0x7f070229" app:feditTextId="@+id/dth_num" app:ffieldHint="@string/dth_number"/>
            <com.upi.axispay.custom.FloatingInputLayout android:id="@+id/operator_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="0x7f070228" android:layout_marginRight="0x7f070228" android:layout_marginBottom="0x7f070229" app:feditTextId="@+id/mobile_operator" app:ffieldHint="@string/curent_operator" app:frightText="@string/change_small" app:frightTextId="@+id/operator_change"/>
            <com.upi.axispay.custom.FloatingInputLayout android:id="@+id/amount_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="0x7f070228" android:layout_marginRight="0x7f070228" app:feditTextId="@+id/amount" app:ffieldHint="@string/amount" app:ffieldIcon="@drawable/rupees_bur" app:frightText="@string/browse_plan"/>
            <com.upi.axispay.custom.FloatingInputLayout android:id="@+id/promo_layout" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="0x7f070228" android:layout_marginRight="0x7f070228" app:ffieldHint="@string/promo_code" app:frightText="@string/verify" app:frightTextId="@+id/verify_code"/>
            <Button android:textColor="@color/white" android:layout_gravity="center" android:id="@+id/button_proceed" android:background="@drawable/background_button_dark_rounded" android:paddingLeft="0x7f070228" android:paddingTop="0x7f070229" android:paddingRight="0x7f070228" android:paddingBottom="0x7f070229" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="0x7f070228" android:minHeight="0dp" android:text="@string/proceed_to_recharge" android:textAllCaps="false"/>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:background="@drawable/rounded_white_background" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="0x7f070228" android:layout_marginRight="0x7f070228" android:layout_marginBottom="0x7f070228" android:layout_below="@+id/recharge_input" android:translationZ="18dp">
            <TextView android:textSize="0x7f07024b" android:textStyle="bold" android:textColor="@color/black" android:gravity="center_horizontal" android:id="@+id/text_recent_transactions" android:padding="0x7f070229" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="0x7f07022e" android:text="@string/mobile_recharge"/>
            <View android:background="@color/grey" android:layout_width="match_parent" android:layout_height="1dp"/>
            <com.upi.axispay.custom.NonScrollListView android:orientation="vertical" android:id="@+id/recycler_view" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="0x7f07022c"/>
            <TextView android:textColor="@color/colorPrimary" android:gravity="center" android:layout_gravity="center" android:id="@+id/empty_view" android:padding="0x7f070228" android:visibility="visible" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/no_transaction_found" style="@style/UPITextView"/>
            <com.google.android.material.tabs.TabLayout android:id="@+id/pager_tab" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" app:tabTextAppearance="@style/TabTextAppearance"/>
            <com.upi.axispay.custom.CustomViewPager android:id="@+id/pager_list" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
