<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@drawable/rounded_white_background" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="0x7f070228" android:translationZ="18dp">
    <Button android:enabled="false" android:textSize="0x7f07024b" android:textStyle="bold" android:textColor="@color/white" android:layout_gravity="end" android:id="@+id/button_create" android:background="@color/colorDivider" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/proceed" android:layout_alignParentBottom="true" android:textAllCaps="false"/>
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_above="@+id/button_create">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView android:textSize="0x7f07024d" android:textStyle="bold" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="0x7f070228" android:text="@string/set_passcode"/>
            <com.upi.axispay.custom.FloatingInputLayout android:id="@+id/edit_old_passcode" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="0x7f070228" app:feditTextId="@+id/old_pass" app:ffieldHint="@string/enter_old_passcode" app:ffieldIcon="@drawable/pass_key"/>
            <com.upi.axispay.custom.FloatingInputLayout android:id="@+id/edit_new_passcode" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="0x7f070228" android:layout_marginRight="0x7f070228" app:errText="@string/passcode_doesnt_match" app:feditTextId="@+id/new_pass" app:ffieldHint="@string/enter_new_passcode" app:ffieldIcon="@drawable/pass_key"/>
            <com.upi.axispay.custom.FloatingInputLayout android:id="@+id/edit_reenter" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="0x7f070228" android:layout_marginTop="0x7f070228" android:layout_marginRight="0x7f070228" app:errText="@string/passcode_doesnt_match" app:feditTextId="@+id/confirm_pass" app:ffieldHint="@string/re_enter_passcode" app:ffieldIcon="@drawable/pass_key"/>
            <LinearLayout android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="0x7f070227" android:layout_marginTop="0x7f070228" android:layout_marginBottom="0x7f070228">
                <CheckBox android:id="@+id/launcher_tc" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0x7f070229" android:layout_marginBottom="0x7f070228" android:checked="false" android:button="@drawable/checkbox_selector"/>
                <TextView android:textSize="0x7f07024d" android:textColor="@color/colorTextSecondary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="0x7f070229" android:layout_marginTop="0x7f070229" android:layout_marginBottom="0x7f070228" android:text="@string/remember_this"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
