<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@color/acc_list_background" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
            <LinearLayout android:orientation="vertical" android:id="@+id/layout_edit" android:background="@drawable/rounded_white_background" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="0x7f070228" android:layout_marginTop="0x7f070229" android:layout_marginBottom="0x7f070229" android:translationZ="0x7f070228">
                <TextView android:textSize="0x7f07024d" android:gravity="center" android:id="@+id/text_intro" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="0x7f070229" android:text="@string/no_existing_upi_contacts"/>
                <com.upi.axispay.custom.FloatingInputLayout android:id="@+id/edit_vpa" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="0x7f07024d" android:hint="@string/enter_upi_id" android:digits="@string/alphanumeric_entries" app:ffieldHint="@string/enter_upi_id"/>
                <Button android:textColor="@color/white" android:layout_gravity="center_horizontal" android:id="@+id/button_verify" android:background="@drawable/background_button_dark_rounded" android:clickable="false" android:layout_width="120dp" android:layout_height="wrap_content" android:layout_marginBottom="0x7f070228" android:text="@string/verify" android:layout_below="@+id/input_layout_username" android:textAllCaps="false"/>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/layout_list" android:background="@drawable/rounded_white_background" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="0x7f070228" android:layout_marginRight="0x7f070228" android:layout_marginBottom="0x7f070228" android:layout_below="@+id/layout_edit" android:translationZ="0x7f070228">
                <EditText android:textSize="0x7f07024d" android:id="@+id/search_vpa" android:padding="0x7f070228" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/upi_id_contacts" android:maxLines="1" android:drawableLeft="0x7f080269" android:drawablePadding="0x7f070231" android:layout_below="@+id/text_intro" android:backgroundTint="@color/grey_dark" android:importantForAutofill="noExcludeDescendants"/>
                <androidx.recyclerview.widget.RecyclerView android:id="@+id/vpa_list" android:background="@color/recycler_background" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
